Fix: layout issues solved

--- a/map-frontend/src/app/filter-menu/filter-menu.component.css
+++ b/map-frontend/src/app/filter-menu/filter-menu.component.css
@@ -109,6 +109,11 @@ mat-expansion-panel  {
   color:gray;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+
 #tag-color-icon {
   width: 13px;
   height: 13px;
